remove unused fix section

--- a/src/components/sections/HeroSection.astro
+++ b/src/components/sections/HeroSection.astro
@@ -1,9 +1,8 @@
 ---
 import MicroProofElement from "./MicroProofElement.astro";
-import HeroFeaturesBlock from "./HeroFeaturesBlock.astro";
 ---
 
-<section class="relative bg-gradient-to-b from-primary-800 to-primary-900 text-white py-20 md:py-32">
+<section class="relative bg-gradient-to-b from-primary-800 to-primary-900 text-white pt-20 pb-10">
   <div class="absolute inset-0 opacity-10">
     <div class="absolute inset-0 bg-[url('/images/clients/crown/grid-pattern.svg')] bg-repeat opacity-20"></div>
   </div>
@@ -31,8 +30,6 @@ import HeroFeaturesBlock from "./HeroFeaturesBlock.astro";
         
         <MicroProofElement />
       </div>
-      
-      <HeroFeaturesBlock />
     </div>
   </div>
 </section>
